[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/misc_assets/rocket.png" type="Texture" id=1]
[ext_resource path="res://src/Projectiles/HomingMissle.gd" type="Script" id=2]
[ext_resource path="res://assets/frames/explosion_frames.tres" type="SpriteFrames" id=3]
[ext_resource path="res://assets/sound_assets/435413__v-ktor__explosion12.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/sound_assets/521377__jarusca__rocket-launch.ogg" type="AudioStream" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 9.35487
height = 10.7149

[sub_resource type="CanvasItemMaterial" id=2]

[node name="HomingMissle" type="Area2D" groups=[
"enemy_bullet",
"hazard",
]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="Lifetime" type="Timer" parent="."]
wait_time = 7.0
autostart = true

[node name="Particles2D" type="CPUParticles2D" parent="."]
material = SubResource( 2 )
position = Vector2( -13.5153, 0 )
amount = 20
lifetime = 0.8
randomness = 1.0
local_coords = false
emission_shape = 1
emission_sphere_radius = 1.0
spread = 110.0
gravity = Vector2( -120, 0 )
initial_velocity = 1.0
angular_velocity = 50.0
radial_accel = 25.0
radial_accel_random = 1.0
damping = 93.58
damping_random = 0.23
scale_amount = 1.5
color = Color( 0.952941, 1, 0.411765, 1 )

[node name="ExplosionSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 3 )

[node name="ExplosionSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="LaunchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -2.0
bus = "SFX"
[connection signal="area_entered" from="." to="." method="_on_HomingMissle_area_entered"]
[connection signal="timeout" from="Lifetime" to="." method="_on_Lifetime_timeout"]
[connection signal="animation_finished" from="ExplosionSprite" to="." method="_on_ExplosionSprite_animation_finished"]
